"""
Notification model - in-app notifications (alerts, reminders, validation results).

Each notification is sent to one user, optionally linked to a site and entity (plan, activity,
change_request). type: info, success, warning, error. is_read = user has seen it.
"""
import uuid

from sqlalchemy import CHAR

from core.db import db


def _uuid_default():
    """Generate a new UUID string for the primary key."""
    return str(uuid.uuid4())


class Notification(db.Model):
    __tablename__ = "notifications"
    __table_args__ = {
        "comment": "Notifications système (alertes, rappels, validation/rejet)",
        "mysql_charset": "utf8mb4",
        "mysql_collate": "utf8mb4_unicode_ci",
    }

    id = db.Column(CHAR(36, collation="utf8mb4_unicode_ci"), primary_key=True, default=_uuid_default, comment="Identifiant de la notification")
    user_id = db.Column(
        CHAR(36, collation="utf8mb4_unicode_ci"), db.ForeignKey("users.id", ondelete="CASCADE"), nullable=False,
        comment="Utilisateur destinataire"
    )
    site_id = db.Column(
        CHAR(36, collation="utf8mb4_unicode_ci"), db.ForeignKey("sites.id", ondelete="CASCADE"), nullable=True,
        comment="Site concerné"
    )
    title = db.Column(db.String(255), nullable=False, comment="Titre")
    message = db.Column(db.Text, nullable=True, comment="Contenu du message")
    type = db.Column(db.Enum('info', 'success', 'warning', 'error'), default='info', comment="Type de notification")
    entity_type = db.Column(db.String(50), nullable=True, comment="Type d'entité liée (PLAN, CHANGE_REQUEST, etc.)")
    entity_id = db.Column(
        CHAR(36, collation="utf8mb4_unicode_ci"),
        nullable=True,
        comment="Identifiant de l'entité liée"
    )
    is_read = db.Column(db.Boolean, nullable=False, default=False, comment="Notification lue ou non")
    created_at = db.Column(db.DateTime, default=db.func.now(), comment="Date de création")